fix: prevent tab bar flicker in multi-row layout
- remove 4px padding when right button is hidden
- Improve logic for the case where the last tab fits in the previous row, but the
after‑tabs new‑tab button would wrap to the next row. In this situation,
disAllowNewtabbutton is set to true.

--- a/addon/chrome/content/overlay/browser.css
+++ b/addon/chrome/content/overlay/browser.css
@@ -138,6 +138,7 @@
   display: none;
   border: none;
   margin: 0;
+  padding: 0;
   vertical-align: bottom;
 }
 
@@ -174,6 +175,9 @@
 #TabsToolbar:not([customizing])[tabmix-show-newtabbutton*="aftertabs"] #new-tab-button,
 #TabsToolbar:not([tabmix-show-newtabbutton]) #new-tab-button {
   visibility: collapse;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
 /*** Private-tab compatibility ***/
